<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    >
    <TableRow
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="4"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/port"
                />

            <EditText
                android:id="@+id/port_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/port_num"
                android:inputType="number"
                />
        </LinearLayout>
    </TableRow>
    <TableRow
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="4"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/text_address"
                />
            <EditText
                android:id="@+id/scan_address_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/ip"
                />
        </LinearLayout>
    </TableRow>
    <TableRow>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                />
            <EditText
                android:id="@+id/wifi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/name"
                />
        </LinearLayout>
    </TableRow>
    <TableRow
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                />
            <EditText
                android:id="@+id/dialog_pass_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </LinearLayout>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/add_wifi"
            android:layout_weight="1"
            android:text="add"
            android:layout_marginTop="10dp"
            />
    </TableRow>
</TableLayout>